==> briansune/WCH-CH32X035-PN532/spi/nfc.c <==
#include "nfc.h"
#define spi_nss(i) GPIO_WriteBit(GPIOA, GPIO_Pin_4, i)

void write_cmd(u8 *cmd, u8 len){

    u8 checksum = 0;
    checksum += PN532_HOSTTOPN532;

    spi_nss(0);
    Delay_Ms(2);

    duplex_wr(0x01); // Special Register for DW

    duplex_wr(PN532_PREAMBLE);
    duplex_wr(PN532_PREAMBLE);
    duplex_wr(PN532_STARTCODE2);
    duplex_wr(len);
    duplex_wr(-len);
    duplex_wr(PN532_HOSTTOPN532);

    for (uint8_t i=0; i<len-1; i++){
        duplex_wr(cmd[i]);
        checksum += cmd[i];
    }

    duplex_wr(-checksum);
    duplex_wr(PN532_POSTAMBLE);

    while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY));

    spi_nss(1);
}

void read_dt(u8 *buf, u8 len){

    buf[0] = 0x00;

    while(1){
        spi_nss(0);

        duplex_wr(0x02); // Special Register for SR
        buf[0] = duplex_wr(0x00); // Dummy

        while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY));
        spi_nss(1);

        if(buf[0] == 0x01)
            break;

        Delay_Us(1);
    }

    spi_nss(0);
    Delay_Ms(2);
    duplex_wr(0x03);

    for (u8 i=0; i<len; i++){

        buf[i] = duplex_wr(0x00); // Dummy

        if((len!=6)&&i==3&&(buf[0]==0)&&(buf[1]==0)&&(buf[2]==0xFF)){
            len = buf[i]+6;
        }

    }

    while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY));
    spi_nss(1);
}
