==> elechouse/nfc-pn532/nfc.cpp <==
#include "nfc.h"

void NFC_Module::write_cmd(u8 *cmd, u8 len)
{
    uint8_t checksum;

    len++;

#ifdef PN532DEBUG
    Serial.print("Sending: ");
#endif

    delay(2);     // or whatever the delay is for waking up the board

    // I2C START
    Wire.beginTransmission(PN532_I2C_ADDRESS);
    checksum = PN532_PREAMBLE + PN532_PREAMBLE + PN532_STARTCODE2;
    send(PN532_PREAMBLE);
    send(PN532_PREAMBLE);
    send(PN532_STARTCODE2);

    send(len);
    send(~len + 1);

    send(PN532_HOSTTOPN532);
    checksum += PN532_HOSTTOPN532;

#ifdef PN532DEBUG
    puthex(PN532_PREAMBLE);
    puthex(PN532_PREAMBLE);
    puthex(PN532_STARTCODE2);
    puthex((unsigned char)len);
    puthex((unsigned char)(~len + 1));
    puthex(PN532_HOSTTOPN532);
#endif

    for (uint8_t i=0; i<len-1; i++)
    {
        if(send(cmd[i])){
            checksum += cmd[i];
#ifdef PN532DEBUG
            puthex(cmd[i]);
#endif
        }else{
            i--;
            delay(1);
        }
    }

    send(~checksum);
    send(PN532_POSTAMBLE);

    // I2C STOP
    Wire.endTransmission();

#ifdef PN532DEBUG
    puthex(~checksum);
    puthex(PN532_POSTAMBLE);
    Serial.write('\n');
#endif
}

void NFC_Module::read_dt(u8 *buf, u8 len)
{
    delay(2);

#ifdef PN532DEBUG
    Serial.print("Reading: ");
#endif
    // Start read (n+1 to take into account leading 0x01 with I2C)
    Wire.requestFrom((u8)PN532_I2C_ADDRESS, (u8)(len+2));
    // Discard the leading 0x01
    receive();
    for (u8 i=0; i<len; i++)
    {
        delay(1);
        buf[i] = receive();
#if 0
        if((len!=6)&&i==3&&(buf[0]==0)&&(buf[1]==0)&&(buf[2]==0xFF)){
            len = buf[i]+6;
        }
#endif

#ifdef PN532DEBUG
        puthex(buf[i]);
#endif
    }
    // Discard trailing 0x00 0x00
    // receive();

#ifdef PN532DEBUG
    Serial.println();
#endif
}
